# pyrateer

./: .nojekyll  README.md  environment.yml  example.py  example_pickle.py  presentation.html  pyproject.toml  requirements-dev.txt
demo/: Case Study Data - Morgan.xlsx  create_rate_plan.qmd  presentation.qmd  rate_plan.pkl  update_rate_plan.qmd
src/pyrateer/: factors.py
test/: conftest.py  test_rating_factor.py
