[project]
name = "pyrateer"
version = "0.0.1"
authors = [
    {name="Morgan Squire", email="morgan.squire@live.com"},
]
description = "Python rating engine"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/mosquire/pyrateer"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}